Add counters for deoptimization types

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -140,6 +140,9 @@ config("features") {
   if (v8_use_external_startup_data == true) {
     defines += [ "V8_USE_EXTERNAL_STARTUP_DATA" ]
   }
+  if (v8_deopt_checks_count == true) {
+    defines += [ "DEOPT_CHECKS_COUNT" ]
+  }
 }
 
 config("toolchain") {
